# Cinix

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
shaders/: default.vert
src/: main.c
src/engine/: array_list.h  config.h  global.h  io.h  physics.h  render.h  types.h  util.h
src/engine/array_list/: array_list.c
src/engine/config/: config.c
src/engine/input/: input.c
src/engine/io/: io.c
src/engine/physics/: physics.c  physics_internal.h
src/engine/render/: render.c  render.h  render_init.c  render_internal.h  render_util.c
src/engine/time/: time.c
